TestEclipse/src/objects/Customer__c.object
<CustomObject>
    <description>A buyer of media.</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of customer.</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of customer.</description>
        <label>First Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of customer.</description>
        <label>Last Name</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>